# library-web-app

./: .gitignore  README.md  TODO.md  bookworms.cabal  package.yaml
app/: DevelMain.hs  Main.hs  devel.hs
config/: keter.yml  settings.yml  test-settings.yml
src/Bookworms/: Server.hs
src/Handler/: Home.hs
web/: index.html
