cabal-version: 3.14
name: bookworms
version: 0.1.0.0
tested-with: GHC==9.12.2

executable bookworms
  hs-source-dirs: app
                , src
  main-is: Main.hs
  exposed-modules: Bookworms.Server
  build-depends:
      base ^>=4.21.0.0
    , aeson
    , attoparsec
    , base-compat
    , bytestring
    , containers
    , directory
    , http-api-data
    , http-client
    , http-media
    , http-types
    , mtl
    , string-conversions
    , text
    , transformers
    , wai
    , warp

  -- Servant dependencies
  build-depends:
       servant
     , servant-server
     , servant-client
     , servant-docs

  -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
  -- Here can be exceptions if we really need features from the newer versions.
  build-depends:
      blaze-html   >= 0.9.0.1 && < 0.10
    , blaze-markup >= 0.8.0.0 && < 0.9
    , cookie       >= 0.4.3   && < 0.6
    , js-jquery    >= 3.3.1   && < 3.8
    , lucid        >= 2.9.11  && < 2.12
    , random       >= 1.1     && < 1.4
    , servant-js   >= 0.9     && < 0.10
    , time         >= 1.6.0.1 && < 1.15

